@@ -119,6 +119,10 @@ Joose.Managed.PropertySet = new Joose.Proto.Class('Joose.Managed.PropertySet', {
     },
     
     
+    beforeConsumedBy : function () {
+    },
+    
+    
     flattenTo : function (target) {
         var targetProps = target.properties
         
@@ -155,18 +159,19 @@ Joose.Managed.PropertySet = new Joose.Proto.Class('Joose.Managed.PropertySet', {
         var flattening = this.cleanClone()
         
         Joose.A.each(arguments, function (arg) {
-            var propSet = arg
+            var isDescriptor    = !(arg instanceof Joose.Managed.PropertySet)
+            var propSet         = isDescriptor ? arg.propertySet : arg
             
-            if (!(arg instanceof Joose.Managed.PropertySet)) {
-                propSet = arg.propertySet
-                
+            propSet.beforeConsumedBy(this, flattening)
+            
+            if (isDescriptor) {
                 if (arg.alias || arg.exclude)   propSet = propSet.clone()
                 if (arg.alias)                  propSet.alias(arg.alias)
                 if (arg.exclude)                propSet.exclude(arg.exclude)
             }
             
             propSet.flattenTo(flattening)
-        })
+        }, this)
         
         flattening.composeTo(this)
     },
